@@ -5,7 +5,7 @@ Date: 2018-01-18
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))
 Description: Likelihood-based boosting for conditional transformation models.
-Depends: mlt (>= 0.2-1), mboost
+Depends: mlt (>= 0.2-3), mboost
 Imports: basefun, sandwich, coneproj, Matrix, methods
 Suggests: TH.data
 License: GPL-2
